add index para buscar termo